Report errors in run_bazel_clang_tidy

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Server Programmability
    • Fully Compatible
    • ALL
    • Programmability 2025-03-31
    • None
    • 3
    • None
    • None
    • None
    • None
    • None
    • None

      The bazel compilation wrapper script for evergreen unconditionally reports success for tasks that are marked for clang-tidy and so clang-tidy warnings are swallowed and reported as successes in CI.

      Fix the issue in the CI config scripts, then fix any clang-tidy warnings that have cropped up in the codebase.

            Assignee:
            James Bronsted
            Reporter:
            James Bronsted
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: