SERVER-102493 fix clang-tidy CI tasks to correctly emit errors and fix warnings that have been hidden (#33681)

GitOrigin-RevId: a39ff58b4df92e2ce70dfbe3b193a18cf3fe09dc